--- a/k-shop/src/components/Exploremenu/ExploreMenu.css
+++ b/k-shop/src/components/Exploremenu/ExploreMenu.css
@@ -42,3 +42,7 @@
 .explore-menu-list::-webkit-scrollbar{
     display: none;
 }
+.explore-menu-list-item .active {
+    border: 4px solid tomato;
+    padding: 2px;
+}
